--- a/admin/index.html
+++ b/admin/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Gatsby Starter Business Content Manager</title>
+    <title>IEEE Technical Committee on Electric and Autonomous Vehicles Content Manager</title>
   <meta name="robots" content="none"></head>
   <body>
   <script type="text/javascript" src="cms.js"></script></body>
